# microdata-data-service

./: .coverage  .env  .gitignore  .pylintrc  Dockerfile  README.md  SECURITY.md  application.py  azure-pipelines.yml  backstage.yaml  pyproject.toml  requirements.txt  start_local.sh
.github/workflows/: pr-test.yaml  test-and-build.yaml
data-service/: main.py
data_service/: .env  __init__.py  app.py  exceptions.py  main.py
data_service/adapters/: local_storage.py
data_service/adapters/encryption/: parquet_encryption.py
data_service/adapters/storage/: file_adapter.py  gcs.py  local.py
data_service/api/: auth.py  data.py  data_api.py  models.py  observability.py  observability_api.py  query_models.py
data_service/config/: .env  .env.gcs  .env.local_file  config.py  dependencies.py  environment.py  log_config.yaml  logging.py  logging.yaml  logging_config.py  uvicorn.py
data_service/core/: file_adapter.py  filters.py  processor.py
data_service/domain/: data.py  filters.py
data_service/exceptions/: __init__.py
data_service/service/: gcs_service.py  local_file_service.py  service.py
data_service/util/: util.py
doc/: openapi.yaml
scripts/: TEST_INNTEKT__1_0.csv  generate_parquet.py  generate_test_JWT.py
static/: swagger-ui.css
tests/resources/: test_data.py  test_resources.py
tests/resources/datastore_unit_test/datastore/: data_versions__1_0.json  data_versions__1_0_0_0.json
tests/resources/resultset/: 1234-1234-1234-1234_enc.parquet
tests/unit/: test_main.py
tests/unit/adapters/: test_local_storage.py
tests/unit/api/: test_api.py  test_auth.py  test_data_api.py  test_data_api2.py  test_query_models.py
tests/unit/core/: days_since_epoch.py  test_filters.py  test_processor.py
tests/unit/domain/: test_data.py  test_data_big_parquet.py  test_filters.py
tests/unit/storage/: test_local.py
tests/unit/util/: days_since_epoch.py  test_adhoc.py  util.py
tests/util/: util.py
tests_manual/: multirequest_client.py
