[tool.poetry]
name = "data-service"
version = "0.1.0"
description = "Backend service for serving datafiles over http"
authors = ["Team Microdata"]
license = "Apache"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
pyarrow = "^15.0.0"
uvicorn = "^0.15.0"
pandas = "^2.2.0"
numpy = "1.26.4"
python-dotenv = "^1.0.1"
PyJWT = "^2.4.0"
aiofiles = "^23.2.1"
cryptography = "^42.0.4"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.1"
pytest-cov = "^4.1.0"
pytest-dotenv = "^0.5.2"
cryptography = "^42.0.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.0"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
