[tool.poetry]
name = "data-service"
version = "0.1.0"
description = "Backend service for serving datafiles over http"
authors = ["Team Microdata"]
license = "Apache"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
pyarrow = "^17.0.0"
uvicorn = {version = "^0.34.2", extras = ["h11==0.16.0"]}
python-dotenv = "^1.0.1"
PyJWT = "^2.4.0"
aiofiles = "^24.0.0"
cryptography = "^44.0.1"
PyYAML = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
pytest-cov = "^6.0.0"
pytest-dotenv = "^0.5.2"
cryptography = "^44.0.1"
ruff = "^0.11.0"
httpx = {version = "^0.28.0", extras = ["h11==0.16.0"]}
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
target-version = "py313"
